--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="@addy" property="og:title" />
+    <meta content="The Coolest AHAHAHAH" property="og:description" />
+    <meta property="og:image" content="https://cdn.discordapp.com/avatars/1163435441710694410/7956fd21f225c4391f981aa7a4813e41.png">
+    <meta content="#89CFF0" data-react-helmet="true" name="theme-color" />
     <title>@addy</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <script src="./assets/js/script.js" defer></script>
@@ -12,7 +16,7 @@
 
 <body>
     <video autoplay loop id="myVideo">
-        <source src="https://cdn.discordapp.com/attachments/1189873573989462047/1189928629363298395/videoplaybackfras.mp4" type="video/mp4">
+        <source src="https://cdn.discordapp.com/attachments/1051452003529797692/1193933498835275867/coolest.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
   
