--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>@addy</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <script src="./assets/js/script.js" defer></script>
+    <script src="./assets/js/oneko.js" defer></script>
     <script src="https://kit.fontawesome.com/b801578fa3.js" crossorigin="anonymous"></script>
 </head>
 
