--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="@addy" property="og:title" />
     <meta content="The Coolest AHAHAHAH" property="og:description" />
-    <link rel="icon" href="/assets/res/favicon.png">
+    <link rel="shortcut icon" type="image/jpg" href="./assets/res/favicon.png" />
     <meta property="og:image" content="https://cdn.discordapp.com/avatars/1163435441710694410/7956fd21f225c4391f981aa7a4813e41.png">
     <meta content="#89CFF0" data-react-helmet="true" name="theme-color" />
     <title>@addy</title>
