--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
     <div class="container">
         <h1 class="username">addy</h1>
-        <p>The coolest person to ever exist.</p>
+        <p>The coolest person in the whole multiverse.</p>
         <br>
         <br>
         <div class="user-icon-box">
